# ASCII_ART

./: .gitignore  CMakeLists.txt  Cell.c  Cell.h  File.c  File.h  Image.c  Image.h  README.md  createGif.bat  font.c  font.h  fontInfo.txt  main.c  result.txt
executables/Linux/: ASCII_ART
src/: Cell.c  Cell.h  File.c  File.h  Font.c  Font.h  FontInfo.h  Image.c  Image.h  font.c  font.h  fontInfo.h  main.c
